--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ twitter_username:
 default_img: 
 
 # Profile settings
-name: 
-profile_img: 
-profile: 
+name: SonderBear
+profile_img: https://pic.images.ac.cn/image/5e7a6db282682
+profile: 互联网搬砖者/阿尔茨海默疑似患者
 social:
   github: 
 
