--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ default_img:
 # Profile settings
 name: SonderBear
 profile_img: https://pic.images.ac.cn/image/5e7a6db282682
-profile: SonderBear，互联网搬砖者，阿尔茨海默疑似患者。在这里记录生活、分享成长。只装可爱不装×
+profile: SonderBear，互联网搬砖者，阿尔茨海默疑似患者。初中曾凭借”最红的枫叶“一文荣获全省作文比赛三等奖。
 social:
 github: 
 
