--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ default_img:
 
 # Profile settings
 name: SonderBear
-profile_img: https://pic.images.ac.cn/image/5e7a6db282682
-profile: SonderBear，互联网搬砖者，阿尔茨海默疑似患者。初中曾凭借”最红的枫叶“一文荣获全省作文比赛三等奖。
+profile_img: https://s1.ax1x.com/2020/04/21/J3Gr4g.jpg
+profile: 英文名Cassiel，艺名SonderBear，阿尔茨海默疑似患者，现阶段致力于欧美市场出海推广。性格随和，柔中带刚，刚完必怂。
 social:
 github: 
 
