--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ default_img:
 # Profile settings
 name: SonderBear
 profile_img: https://s1.ax1x.com/2020/04/21/J3Gcgs.jpg
-profile: 英文名Cassiel，艺名SonderBear，阿尔茨海默疑似患者。现阶段致力于欧美市场出海。
+profile: 阿尔茨海默疑似患者。现阶段致力于欧美市场出海。
 social:
 github: 
 
