--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 # Site/SEO settings
 email: cassieldyf@163.com
-permalink: /:year/:month/:day/:title/
+baseurl: "https://sonderbear.github.io/"
+paginate: 8
+paginate_path: "/blog/page-:num"
 google_analytics: 
 
 title: SonderBear's World
